--- a/ux/html/LoginAdmin.html
+++ b/ux/html/LoginAdmin.html
@@ -12,7 +12,10 @@ Modificado: 3/12/19
 
     <script>
         var proxy = new Proxy();
-
+        //Para el local
+        //var direccion = "https://localhost:8080";
+        //Para el plesk
+        var direccion = "https://juconol.upv.edu.es";
         function setCookie(cname, cvalue) {
             //var d = new Date();
             // d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
@@ -38,7 +41,7 @@ Modificado: 3/12/19
 
         function checkCookie() {
             var user = getCookie("username");
-            var url = "http://localhost:8080/ux/html/admin.html";
+            var url = direccion+"/ux/html/admin.html";
             console.log("hey"+user);
             if (user != "") {
                 var a = document.createElement("a");
