--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -9,7 +9,10 @@
         <script type="text/javascript" src="../js/map.js"></script>
         <script>
             var proxy = new Proxy();
-
+            //Para el local
+            //var direccion = "https://localhost:8080";
+            //Para el plesk
+            var direccion = "https://juconol.upv.edu.es";
             function setCookie(cname, cvalue) {
                 //var d = new Date();
                 // d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
@@ -34,7 +37,7 @@
 
             function checkCookie() {
                 var user = getCookie("username");
-                var url = "http://localhost:8080/ux/html/principal.html";
+                var url = direccion+"/ux/html/principal.html";
                 if (user != "") {
                     alert("Los cookies funcionan estimado: " + user);
                     var a = document.createElement("a");
@@ -498,7 +501,7 @@
                                     y
                                     confirmo
                                     que he leído y comprendido la Política de privacidad.
-                                    <a href="http://localhost:8080/ux/pdf/terminos.pdf">Politicas de
+                                    <a href="https://juconol.upv.edu.es/ux/pdf/terminos.pdf">Politicas de
                                         privacidad</a></label>
                             </div>
                         </form>
