jquery en https

--- a/ux/html/LoginAdmin.html
+++ b/ux/html/LoginAdmin.html
@@ -197,7 +197,7 @@ Modificado: 3/12/19
 
 
     <!-- Librería jQuery requerida por los plugins de JavaScript -->
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
 
     <!-- Todos los plugins JavaScript de Bootstrap (también puedes
                 incluir archivos JavaScript individuales de los únicos
