--- a/ux/html/aboutUs.html
+++ b/ux/html/aboutUs.html
@@ -71,7 +71,7 @@
             </div>
         </section>
         <!-- Librería jQuery requerida por los plugins de JavaScript -->
-        <script src="http://code.jquery.com/jquery.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
 
         <!-- Todos los plugins JavaScript de Bootstrap (también puedes
 incluir archivos JavaScript individuales de los únicos
