--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -302,7 +302,7 @@ Modificado: 3/12/19
                     divTipoUsuario.appendChild(document.createTextNode(""));
 
                     divIdUsuario.innerHTML = "";
-                    divIdUsuario.appendChild(document.createTextNode("El sensor está en inventario"));
+                    divIdUsuario.appendChild(document.createTextNode("El sensor está en el inventario"));
 
                     divNombre.innerHTML = "";
                     divNombre.appendChild(document.createTextNode(""));
