cambiar https:localhost a http:localhost

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -26,7 +26,7 @@ Modificado: 3/12/19
         // Declaracion de variables
         var proxy = new Proxy();
         //Para el local
-        //var direccion = "https://localhost:8080";
+        //var direccion = "http://localhost:8080";
         //Para el plesk
         var direccion = "https://juconol.upv.edu.es";
         var sensores;
