--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -10,7 +10,7 @@
         <script>
             var proxy = new Proxy();
             //Para el local
-            //var direccion = "https://localhost:8080";
+            //var direccion = "http://localhost:8080";
             //Para el plesk
             var direccion = "https://juconol.upv.edu.es";
             function setCookie(cname, cvalue) {
