Agregada capa de CO y funciona
Por fin se ve las layer creadas

--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -15,7 +15,8 @@
         //Para el plesk
         //var direccion = "https://juconol.upv.edu.es";
 
-        recibirMedidasFecha({ "desde": 0, "hasta": 0 });
+        //recibirMedidasFecha({ "desde": 0, "hasta": 0 });
+        recibirCO({"desde":0, "hasta":0});
 
     </script>
 
@@ -114,9 +115,10 @@
                 </div>
                 <div class="col-sm-9">
                     <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-secondary">Left</button>
-                        <button type="button" class="btn btn-secondary">Middle</button>
-                        <button type="button" class="btn btn-secondary">Right</button>
+                        <button type="button" class="btn btn-secondary btn_CO">CO</button>
+                        <button type="button" class="btn btn-secondary btn_NOX">NOX</button>
+                        <button type="button" class="btn btn-secondary btn_SO2">SO2</button>
+                        <button type="button" class="btn btn-secondary btn_irritante">Gases irritantes</button>
                     </div>
                 </div>
             </div>
