Simplificando getMedidasPorFecha para facilitar su uso y poder hacer el sistema de layers que se desea

--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -15,8 +15,9 @@
         //Para el plesk
         //var direccion = "https://juconol.upv.edu.es";
 
-        //recibirMedidasFecha({ "desde": 0, "hasta": 0 });
-        //document.getElementById("co").onclick = recibirCO({"desde":0, "hasta":0});
+        recibirMedidasFecha({ "desde": 0, "hasta": 0 });
+        //recibirCO({"desde":0, "hasta":0});
+        //removeCO();
         
 
     </script>
