--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -78,7 +78,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#mapa">Mapa</a>
+                        <a class="nav-link js-scroll-trigger" href="#map">Mapa</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#app">App</a>
@@ -112,7 +112,7 @@
 
     <!------------------------------------------------ Sección Mapa -------------------------------------------------------->
 
-    <section class="page-section container-fluid pt-2" id="mapa">
+    <section class="page-section container-fluid pt-7" id="mapa">
         <div class="map" id="map">
         </div>
         <div class="container-fluid leyenda_mapa mt-3" id="leyenda_mapa">
