cambio de direccion de localhost a lo del plesk

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -22,9 +22,9 @@ Modificado: 3/12/19
         // Declaracion de variables
         var proxy = new Proxy();
         //Para el local
-        var direccion = "http://localhost:8080";
+        //var direccion = "http://localhost:8080";
         //Para el plesk
-        //var direccion = "https://localhost:8080";
+        var direccion = "https://localhost:8080";
         var sensores;
         var unSensor // Sensor clicado
 
