--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -747,7 +747,7 @@ Modificado: 3/12/19
 
                     proxy.desvincularUsuarioDeSensorPorIdUsuario(unSensor.Usuario.IdUsuario);
 
-                    //location.reload();
+                    location.reload();
 
                 } else {
                     console.log("Borrado sensor: " + unSensor.IdSensor);
