--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -434,7 +434,7 @@
                                 y
                                 confirmo
                                 que he leído y comprendido la Política de privacidad.
-                                <a href="http://localhost:8080/ux/pdf/terminos.pdf">Politicas de
+                                <a href="https://juconol.upv.edu.es/ux/pdf/terminos.pdf">Politicas de
                                     privacidad</a></label>
                         </div>
                     </form>
