--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -814,7 +814,7 @@ Modificado: 3/12/19
 
                 for (let i = 0; i < datos["medidas"].length; i++) {
 
-                    var iconBase = 'http://maps.google.com/mapfiles/ms/icons/';
+                    var iconBase = 'https://maps.google.com/mapfiles/ms/icons/';
                     var icon;
                     /*if(datos[i].IdTipoMedida == 2){
                         icon = iconBase + 'purple-dot.png'
@@ -1073,7 +1073,7 @@ Modificado: 3/12/19
 
     </script>
 
-    <!-- Barra de busqueda (barra-busqueda.js)-->
+    <!-- Barra de busqueda -->
     <script>
         function buscador() {
             // Declare variables
@@ -1169,7 +1169,7 @@ Modificado: 3/12/19
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark fixed-top fondoOscuro navbar-shrink8" id="darkNav">
                 <div class="container">
-                    <a class="navbar-brand js-scroll-trigger nunito" href="index.html"><img src="../images/earth.png" width="30" alt=""> Poluzone</a>
+                    <a class="navbar-brand js-scroll-trigger nunito" href="../html/index.html"><img src="../images/earth.png" width="30" alt=""> Poluzone</a>
                     <a class="navbar-toggler navbar-toggler-right nunito" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="material-icons">
                             menu
@@ -1180,17 +1180,17 @@ Modificado: 3/12/19
                         <ul class="navbar-nav text-uppercase w-100">
 
                             <li class="align-self-center ml-5">
-                                <a class="modoSensores" id="modoSensores" onclick="cambioASensores()" href="#contact">SENSORES</a>
+                                <a class="modoSensores" id="modoSensores" onclick="cambioASensores()" href="#sensores">SENSORES</a>
                             </li>
 
                             <li class="align-self-center ml-2">
-                                <a class="modoUsuarios" id="modoUsuarios" onclick="cambioAUsuarios()" href="#contact">USUARIOS</a>
+                                <a class="modoUsuarios" id="modoUsuarios" onclick="cambioAUsuarios()" href="#usuarios">USUARIOS</a>
                             </li>
 
                             <ul class="ml-auto w-100">
 
                                 <li class="cerrarSesion nav-item ml-auto">
-                                    <a class="nav-link js-scroll-trigger" onclick="eliminarCookies()" href="#contact">CERRAR SESIÓN</a>
+                                    <a class="nav-link js-scroll-trigger" onclick="eliminarCookies()" href="#cerrar-sesion">CERRAR SESIÓN</a>
                                 </li>
 
                             </ul>
