cambiar direccion juconol

--- a/ux/html/admin.html
+++ b/ux/html/admin.html
@@ -24,9 +24,9 @@ Modificado: 3/12/19
         // Declaracion de variables
         var proxy = new Proxy();
         //Para el local
-        var direccion = "http://localhost:8080";
+        //var direccion = "http://localhost:8080";
         //Para el plesk
-        //var direccion = "https://juconol.upv.edu.es";
+        var direccion = "https://juconol.upv.edu.es";
         var sensores;
         var unSensor // Sensor clicado
 
