--- a/ux/html/pruebaPop-upLogin.html
+++ b/ux/html/pruebaPop-upLogin.html
@@ -115,7 +115,7 @@
                 </div></br>
                 <div class="input-group">
                     <label class="sizeXS centrado"><input id="condiciones" type="checkbox" name="condiciones" style="margin: 6px;"> Acepto los Términos de uso y confirmo que he leído y comprendido la Política de privacidad.
-                      <a href="http://localhost:8080/ux/pdf/terminos.pdf">Politicas de privacidad</a></label>
+                      <a href="https://juconol.upv.edu.es/ux/pdf/terminos.pdf">Politicas de privacidad</a></label>
                 </div>
             </form>           
         </div>
