--- a/ux/html/index.html
+++ b/ux/html/index.html
@@ -8,6 +8,7 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwukBpX9SUI57LEeMhlQ-BlDfC2LeS2K8&callback=initMap&libraries=visualization"
         type="text/javascript"></script>
+        <script type="text/javascript" src="../js/claseMapa.js"></script>
     <script>
         var proxy = new Proxy();
 
