ze me orvido una c

--- a/ux/html/LoginAdmin.html
+++ b/ux/html/LoginAdmin.html
@@ -81,7 +81,7 @@ Modificado: 3/12/19
             document.getElementById("textoIncorrecto").innerHTML = "El usuario introducido no es un Administrador";
         }
 
-        funtion comprobarSiSePresionoIntro() {
+        function comprobarSiSePresionoIntro() {
             if (event.key === 'Enter') {
                 console.log("Se ha presionado Enter");
                 ComprobarUsuario();
