--- a/ux/html/LoginAdmin.html
+++ b/ux/html/LoginAdmin.html
@@ -13,9 +13,9 @@ Modificado: 3/12/19
     <script>
         var proxy = new Proxy();
         //Para el local
-        //var direccion = "http://localhost:8080";
+        var direccion = "http://localhost:8080";
         //Para el plesk
-        var direccion = "https://juconol.upv.edu.es";
+        //var direccion = "https://juconol.upv.edu.es";
 
         function setCookie(cname, cvalue) {
             //var d = new Date();
